# tauri-video-streaming-template

./: Readme.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.jsx  index.css
ui/src/components/: Player.jsx
